--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>email</groupId>
-	<artifactId>smart-assistant</artifactId>
+	<artifactId>Springboot-Backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>smart-assistant</name>
 	<description>Demo project for Spring Boot</description>
